Changed hed and subhead

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
     </script>
 
     <div>
-        <h2>Worcester Range</h2>
+        <h2>The Worcester Range Management Unit</h2>
         <div id="leaflet" style="min-height: 500px; max-height: 800px; width: 100%"></div>
         <div style="font-size: 14px; color:rgb(118, 118, 118)">
-            The Worcester Range consists of five properties comprising 18,722 acres.</div>
+            A map showing the five properties ANR owns along the length of the Worcester Range, totaling 18,772 acres.</div>
 
 
 
