--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
 
             const map = L.map("leaflet", {
-                maxBounds: [[44.67451255330359, -72.15133666992189], [[44.18417357325395, -73.08380126953126]]],
+                maxBounds: [[44.77451255330359, -72.05133666992189], [[44.08417357325395, -73.18380126953126]]],
                 minZoom: 8,
-                maxBoundsViscosity: 1
+                maxBoundsViscosity: .9
             }).setView(
                 [44.42987934519187, -72.61793817578537],
                 10
